<resources>
    <string name="app_name">Football Match Schedule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_lineups">Lineups</string>
    <string name="str_goal_keeper">Goal Keeper</string>
    <string name="str_defense">Defense</string>
    <string name="str_midfielder">Midfielder</string>
    <string name="str_forward">Forward</string>
    <string name="str_substitutes">Substitutes</string>
    <string name="str_goals">Goals</string>
    <string name="str_shots">Shots</string>
    <string name="str_last_match">Last Match</string>
    <string name="str_next_match">Next Match</string>
    <string name="str_favorites">Favorites</string>
    <string name="str_match">Match</string>
    <string name="str_teams">Teams</string>
    <string name="str_last">Last</string>
    <string name="str_next">Next</string>
    <string name="str_search">Search</string>
    <string name="str_overview">Overview</string>
    <string name="str_player">Player</string>
    <string name="str_weight_kg">Weight(Kg)</string>
    <string name="str_height_m">Height(m)</string>

    <string-array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </string-array>

    <string-array name="leagueID">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </string-array>
</resources>
