<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">
<ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorDark"
            android:padding="10dp"/>

        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/img_homeTeam"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/progress_image"
                    />
                    <TextView
                        android:id="@+id/txt_homeTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                    />

            </LinearLayout>
            <TextView
                    android:id="@+id/txt_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="VS"
                    android:layout_gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:padding="3dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="5dp">
                <ImageView
                        android:id="@+id/img_awayTeam"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/progress_image"
                />
                <TextView
                        android:id="@+id/txt_awayTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                />
            </LinearLayout>
        </LinearLayout>
        <View android:background="#e0e0e0"
              android:layout_width = "match_parent"
              android:padding="10dp"
              android:layout_height="3dp"/>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="5dp">
                <TextView
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_goalScorerHome"
                        android:layout_width="wrap_content"
                        android:textSize="14sp"

                />

            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_goals"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorDark"
                    android:padding="3dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                <TextView
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:id="@+id/txt_goalScorerAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="5dp">
                <TextView
                        android:id="@+id/txt_homeShots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14sp"/>

            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_shots"
                    android:textColor="@color/colorDark"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:padding="3dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                <TextView
                        android:id="@+id/txt_awayShots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="14sp"
                />
            </LinearLayout>
        </LinearLayout>
        <View android:background="#e0e0e0"
              android:layout_width = "match_parent"
              android:padding="10dp"
              android:layout_height="3dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_lineups"
                android:textColor="@color/colorDark"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="10dp"/>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="5dp">
                <TextView
                        android:id="@+id/txt_homeGK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp" />

            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_goal_keeper"
                    android:textColor="@color/colorDark"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:padding="3dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                <TextView
                        android:id="@+id/txt_awayGK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="5dp">
                <TextView
                        android:id="@+id/txt_homeDefense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14sp"
                />

            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_defense"
                    android:textColor="@color/colorDark"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:padding="3dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                <TextView
                        android:id="@+id/txt_awayDefense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="14sp"
                />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="5dp">
                <TextView
                        android:id="@+id/txt_homeMid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14sp"/>

            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_midfielder"
                    android:textColor="@color/colorDark"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:padding="3dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                <TextView
                        android:id="@+id/txt_awayMid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="14sp"
                />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="5dp">
                <TextView
                        android:id="@+id/txt_homeForward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14sp"
                />

            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_forward"
                    android:textColor="@color/colorDark"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:padding="3dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                <TextView
                        android:id="@+id/txt_awayForward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="14sp"
                />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:padding="5dp">
                <TextView
                        android:id="@+id/txt_homeSubs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="14sp"
                />

            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_substitutes"
                    android:textColor="@color/colorDark"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:padding="3dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:padding="5dp">

                <TextView
                        android:id="@+id/txt_awaySubs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textSize="14sp"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>